[package]
name = "advent_of_code"
version = "1.0.0"
authors = ["John Doe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01/bin/main.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/main.rs"

[[bin]]
name = "day03"
path = "src/day03/bin/main.rs"

[[bin]]
name = "day04"
path = "src/day04/bin/main.rs"

[[bin]]
name = "day05"
path = "src/day05/bin/main.rs"

[[bin]]
name = "day06"
path = "src/day06/bin/main.rs"

[[bin]]
name = "day07"
path = "src/day07/bin/main.rs"

[[bin]]
name = "day08"
path = "src/day08/bin/main.rs"

[[bin]]
name = "day09"
path = "src/day09/bin/main.rs"

[[bin]]
name = "day10"
path = "src/day10/bin/main.rs"

[[bin]]
name = "day11"
path = "src/day11/bin/main.rs"

[[bin]]
name = "day12"
path = "src/day12/bin/main.rs"

[[bin]]
name = "day13"
path = "src/day13/bin/main.rs"

[[bin]]
name = "day14"
path = "src/day14/bin/main.rs"

[[bin]]
name = "day15"
path = "src/day15/bin/main.rs"

[[bin]]
name = "day16"
path = "src/day16/bin/main.rs"

[[bin]]
name = "day17"
path = "src/day17/bin/main.rs"

[[bin]]
name = "day18"
path = "src/day18/bin/main.rs"

[[bin]]
name = "day19"
path = "src/day19/bin/main.rs"

[[bin]]
name = "day20"
path = "src/day20/bin/main.rs"

[[bin]]
name = "day21"
path = "src/day21/bin/main.rs"

[[bin]]
name = "day22"
path = "src/day22/bin/main.rs"

[[bin]]
name = "day23"
path = "src/day23/bin/main.rs"

[[bin]]
name = "day24"
path = "src/day24/bin/main.rs"

[[bin]]
name = "day25"
path = "src/day25/bin/main.rs"

[dependencies]
regex = "1"
